# self-corrective-rag

./: .env  .env.dev  .env.prod  .gitignore  README.md  app.ps1  app.sh  pyproject.toml
com/crack/snap/make/: app.py  config.py  containers.py  di.py  vectorizer.py
com/crack/snap/make/graph/: graph_service.py
com/crack/snap/make/graph/chains/: answer_generation.py  answer_grader.py  hallucination_grader.py  retrieval_grader.py  router.py
com/crack/snap/make/graph/components/: __init__.py  decide_generation.py  grade_generation.py  route_question.py
com/crack/snap/make/graph/nodes/: generate_answer.py  grade_document.py  retrieve_document.py  web_search.py
com/crack/snap/make/graph/tools/: web_search_tool.py
com/crack/snap/make/model/: __init__.py  graph_state.py  user_message.py
com/crack/snap/make/routes/: app_routes.py  chat_client_routes.py
com/crack/snap/make/services/: __init__.py  self_corrective_rag_service.py
com/crack/snap/make/static/css/: styles.css
com/crack/snap/make/static/scripts/: script.js
com/crack/snap/make/templates/: index.html
com/crack/snap/make/utils/: utility.py
